--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
     font-size: 5rem;
     white-space: nowrap;
     position: absolute;
-    top: 25%;
+    top: 30%;
     left: 50%;
     transform: translateX(-50%);
     /* z-index: -1; */
@@ -78,6 +78,7 @@ h1 {
     position: absolute;
     top: 50%;
     font-weight: bold;
+    white-space: nowrap;
 }
 
 .left .btn {
@@ -98,4 +99,46 @@ h1 {
 .right .btn:hover {
     background: rgba(84, 84, 84, 0.4); 
 
+}
+
+
+@media (max-width:1000px) {
+    h1 {
+        font-size: 4.3rem;
+    }
+    
+}
+
+@media (max-width:800px) {
+    h1 {
+        font-size: 3rem;
+    }
+    .btn {
+        top:45%;
+        font-size: 1.3rem;
+    }
+    
+}
+@media (max-width:600px) {
+    h1 {
+        font-size: 2.5rem;
+    }
+    .btn {
+        top:43%;
+        font-size: 1.2rem;
+        padding: 0.5rem 1.5rem
+    }
+    
+}
+
+@media (max-width:500px) {
+    h1 {
+        font-size: 2rem;
+    }
+    .btn {
+        top:41%;
+        font-size: 1.1rem;
+        padding: 0.4rem 1.3rem
+    }
+    
 }
